# cpp-extensions

./: CMakeLists.txt  README.md
cppext/: CMakeLists.txt  spin.h  split.cpp  split.h  tree.h
test/: CMakeLists.txt  split-test.cpp
test/data/: long-file-to-split
